Contact email for questions and offers...

--- a/README
+++ b/README
@@ -1,5 +1,9 @@
 # hisinad
 
+Experiments with hi3516cv100 (and similar v1 Hisilicon SoCs).
+
+Please contact pianisteg.mobile@gmail.com for any questions.
+
 
 # How to compile?
 
